--- a/db/cip_constants.yml
+++ b/db/cip_constants.yml
@@ -1,245 +1,245 @@
 ---
 - !ruby/object:CipCode_
   gov_code: 0
-  description_ko: 
-  description_en: I prefer not to answer.
+  name_ko: 
+  name_en: I prefer not to answer.
 
 - !ruby/object:CipCode_
   gov_code: 1
-  description_ko: 
-  description_en: AGRICULTURE, AGRICULTURE OPERATIONS, AND RELATED SCIENCES.
+  name_ko: 
+  name_en: AGRICULTURE, AGRICULTURE OPERATIONS, AND RELATED SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 3
-  description_ko: 
-  description_en: NATURAL RESOURCES AND CONSERVATION.
+  name_ko: 
+  name_en: NATURAL RESOURCES AND CONSERVATION.
 
 - !ruby/object:CipCode_
   gov_code: 4
-  description_ko: 
-  description_en: ARCHITECTURE AND RELATED SERVICES.
+  name_ko: 
+  name_en: ARCHITECTURE AND RELATED SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 5
-  description_ko: 
-  description_en: AREA, ETHNIC, CULTURAL, GENDER, AND GROUP STUDIES.
+  name_ko: 
+  name_en: AREA, ETHNIC, CULTURAL, GENDER, AND GROUP STUDIES.
 
 - !ruby/object:CipCode_
   gov_code: 9
-  description_ko: 
-  description_en: COMMUNICATION, JOURNALISM, AND RELATED PROGRAMS.
+  name_ko: 
+  name_en: COMMUNICATION, JOURNALISM, AND RELATED PROGRAMS.
 
 - !ruby/object:CipCode_
   gov_code: 10
-  description_ko: 
-  description_en: COMMUNICATIONS TECHNOLOGIES/TECHNICIANS AND SUPPORT SERVICES.
+  name_ko: 
+  name_en: COMMUNICATIONS TECHNOLOGIES/TECHNICIANS AND SUPPORT SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 11
-  description_ko: 
-  description_en: COMPUTER AND INFORMATION SCIENCES AND SUPPORT SERVICES.
+  name_ko: 
+  name_en: COMPUTER AND INFORMATION SCIENCES AND SUPPORT SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 12
-  description_ko: 
-  description_en: PERSONAL AND CULINARY SERVICES.
+  name_ko: 
+  name_en: PERSONAL AND CULINARY SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 13
-  description_ko: 
-  description_en: EDUCATION.
+  name_ko: 
+  name_en: EDUCATION.
 
 - !ruby/object:CipCode_
   gov_code: 14
-  description_ko: 
-  description_en: ENGINEERING.
+  name_ko: 
+  name_en: ENGINEERING.
 
 - !ruby/object:CipCode_
   gov_code: 15
-  description_ko: 
-  description_en: ENGINEERING TECHNOLOGIES AND ENGINEERING-RELATED FIELDS.
+  name_ko: 
+  name_en: ENGINEERING TECHNOLOGIES AND ENGINEERING-RELATED FIELDS.
 
 - !ruby/object:CipCode_
   gov_code: 16
-  description_ko: 
-  description_en: FOREIGN LANGUAGES, LITERATURES, AND LINGUISTICS.
+  name_ko: 
+  name_en: FOREIGN LANGUAGES, LITERATURES, AND LINGUISTICS.
 
 - !ruby/object:CipCode_
   gov_code: 19
-  description_ko: 
-  description_en: FAMILY AND CONSUMER SCIENCES/HUMAN SCIENCES.
+  name_ko: 
+  name_en: FAMILY AND CONSUMER SCIENCES/HUMAN SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 22
-  description_ko: 
-  description_en: LEGAL PROFESSIONS AND STUDIES.
+  name_ko: 
+  name_en: LEGAL PROFESSIONS AND STUDIES.
 
 - !ruby/object:CipCode_
   gov_code: 23
-  description_ko: 
-  description_en: ENGLISH LANGUAGE AND LITERATURE/LETTERS.
+  name_ko: 
+  name_en: ENGLISH LANGUAGE AND LITERATURE/LETTERS.
 
 - !ruby/object:CipCode_
   gov_code: 24
-  description_ko: 
-  description_en: LIBERAL ARTS AND SCIENCES, GENERAL STUDIES AND HUMANITIES.
+  name_ko: 
+  name_en: LIBERAL ARTS AND SCIENCES, GENERAL STUDIES AND HUMANITIES.
 
 - !ruby/object:CipCode_
   gov_code: 25
-  description_ko: 
-  description_en: LIBRARY SCIENCE.
+  name_ko: 
+  name_en: LIBRARY SCIENCE.
 
 - !ruby/object:CipCode_
   gov_code: 26
-  description_ko: 
-  description_en: BIOLOGICAL AND BIOMEDICAL SCIENCES.
+  name_ko: 
+  name_en: BIOLOGICAL AND BIOMEDICAL SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 27
-  description_ko: 
-  description_en: MATHEMATICS AND STATISTICS.
+  name_ko: 
+  name_en: MATHEMATICS AND STATISTICS.
 
 - !ruby/object:CipCode_
   gov_code: 28
-  description_ko: 
-  description_en: MILITARY SCIENCE, LEADERSHIP AND OPERATIONAL ART.
+  name_ko: 
+  name_en: MILITARY SCIENCE, LEADERSHIP AND OPERATIONAL ART.
 
 - !ruby/object:CipCode_
   gov_code: 29
-  description_ko: 
-  description_en: MILITARY TECHNOLOGIES AND APPLIED SCIENCES.
+  name_ko: 
+  name_en: MILITARY TECHNOLOGIES AND APPLIED SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 30
-  description_ko: 
-  description_en: MULTI/INTERDISCIPLINARY STUDIES.
+  name_ko: 
+  name_en: MULTI/INTERDISCIPLINARY STUDIES.
 
 - !ruby/object:CipCode_
   gov_code: 31
-  description_ko: 
-  description_en: PARKS, RECREATION, LEISURE, AND FITNESS STUDIES.
+  name_ko: 
+  name_en: PARKS, RECREATION, LEISURE, AND FITNESS STUDIES.
 
 - !ruby/object:CipCode_
   gov_code: 32
-  description_ko: 
-  description_en: BASIC SKILLS AND DEVELOPMENTAL/REMEDIAL EDUCATION.
+  name_ko: 
+  name_en: BASIC SKILLS AND DEVELOPMENTAL/REMEDIAL EDUCATION.
 
 - !ruby/object:CipCode_
   gov_code: 33
-  description_ko: 
-  description_en: CITIZENSHIP ACTIVITIES.
+  name_ko: 
+  name_en: CITIZENSHIP ACTIVITIES.
 
 - !ruby/object:CipCode_
   gov_code: 34
-  description_ko: 
-  description_en: HEALTH-RELATED KNOWLEDGE AND SKILLS.
+  name_ko: 
+  name_en: HEALTH-RELATED KNOWLEDGE AND SKILLS.
 
 - !ruby/object:CipCode_
   gov_code: 35
-  description_ko: 
-  description_en: INTERPERSONAL AND SOCIAL SKILLS.
+  name_ko: 
+  name_en: INTERPERSONAL AND SOCIAL SKILLS.
 
 - !ruby/object:CipCode_
   gov_code: 36
-  description_ko: 
-  description_en: LEISURE AND RECREATIONAL ACTIVITIES.
+  name_ko: 
+  name_en: LEISURE AND RECREATIONAL ACTIVITIES.
 
 - !ruby/object:CipCode_
   gov_code: 37
-  description_ko: 
-  description_en: PERSONAL AWARENESS AND SELF-IMPROVEMENT.
+  name_ko: 
+  name_en: PERSONAL AWARENESS AND SELF-IMPROVEMENT.
 
 - !ruby/object:CipCode_
   gov_code: 38
-  description_ko: 
-  description_en: PHILOSOPHY AND RELIGIOUS STUDIES.
+  name_ko: 
+  name_en: PHILOSOPHY AND RELIGIOUS STUDIES.
 
 - !ruby/object:CipCode_
   gov_code: 39
-  description_ko: 
-  description_en: THEOLOGY AND RELIGIOUS VOCATIONS.
+  name_ko: 
+  name_en: THEOLOGY AND RELIGIOUS VOCATIONS.
 
 - !ruby/object:CipCode_
   gov_code: 40
-  description_ko: 
-  description_en: PHYSICAL SCIENCES.
+  name_ko: 
+  name_en: PHYSICAL SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 41
-  description_ko: 
-  description_en: SCIENCE TECHNOLOGIES/TECHNICIANS.
+  name_ko: 
+  name_en: SCIENCE TECHNOLOGIES/TECHNICIANS.
 
 - !ruby/object:CipCode_
   gov_code: 42
-  description_ko: 
-  description_en: PSYCHOLOGY.
+  name_ko: 
+  name_en: PSYCHOLOGY.
 
 - !ruby/object:CipCode_
   gov_code: 43
-  description_ko: 
-  description_en: HOMELAND SECURITY, LAW ENFORCEMENT, FIREFIGHTING AND RELATED PROTECTIVE SERVICES.
+  name_ko: 
+  name_en: HOMELAND SECURITY, LAW ENFORCEMENT, FIREFIGHTING AND RELATED PROTECTIVE SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 44
-  description_ko: 
-  description_en: PUBLIC ADMINISTRATION AND SOCIAL SERVICE PROFESSIONS.
+  name_ko: 
+  name_en: PUBLIC ADMINISTRATION AND SOCIAL SERVICE PROFESSIONS.
 
 - !ruby/object:CipCode_
   gov_code: 45
-  description_ko: 
-  description_en: SOCIAL SCIENCES.
+  name_ko: 
+  name_en: SOCIAL SCIENCES.
 
 - !ruby/object:CipCode_
   gov_code: 46
-  description_ko: 
-  description_en: CONSTRUCTION TRADES.
+  name_ko: 
+  name_en: CONSTRUCTION TRADES.
 
 - !ruby/object:CipCode_
   gov_code: 47
-  description_ko: 
-  description_en: MECHANIC AND REPAIR TECHNOLOGIES/TECHNICIANS.
+  name_ko: 
+  name_en: MECHANIC AND REPAIR TECHNOLOGIES/TECHNICIANS.
 
 - !ruby/object:CipCode_
   gov_code: 48
-  description_ko: 
-  description_en: PRECISION PRODUCTION.
+  name_ko: 
+  name_en: PRECISION PRODUCTION.
 
 - !ruby/object:CipCode_
   gov_code: 49
-  description_ko: 
-  description_en: TRANSPORTATION AND MATERIALS MOVING.
+  name_ko: 
+  name_en: TRANSPORTATION AND MATERIALS MOVING.
 
 - !ruby/object:CipCode_
   gov_code: 50
-  description_ko: 
-  description_en: VISUAL AND PERFORMING ARTS.
+  name_ko: 
+  name_en: VISUAL AND PERFORMING ARTS.
 
 - !ruby/object:CipCode_
   gov_code: 51
-  description_ko: 
-  description_en: HEALTH PROFESSIONS AND RELATED PROGRAMS.
+  name_ko: 
+  name_en: HEALTH PROFESSIONS AND RELATED PROGRAMS.
 
 - !ruby/object:CipCode_
   gov_code: 52
-  description_ko: 
-  description_en: BUSINESS, MANAGEMENT, MARKETING, AND RELATED SUPPORT SERVICES.
+  name_ko: 
+  name_en: BUSINESS, MANAGEMENT, MARKETING, AND RELATED SUPPORT SERVICES.
 
 - !ruby/object:CipCode_
   gov_code: 53
-  description_ko: 
-  description_en: HIGH SCHOOL/SECONDARY DIPLOMAS AND CERTIFICATES.
+  name_ko: 
+  name_en: HIGH SCHOOL/SECONDARY DIPLOMAS AND CERTIFICATES.
 
 - !ruby/object:CipCode_
   gov_code: 54
-  description_ko: 
-  description_en: HISTORY.
+  name_ko: 
+  name_en: HISTORY.
 
 - !ruby/object:CipCode_
   gov_code: 60
-  description_ko: 
-  description_en: RESIDENCY PROGRAMS.
+  name_ko: 
+  name_en: RESIDENCY PROGRAMS.
 
 - !ruby/object:CipCode_
   gov_code: 100
-  description_ko: 
-  description_en: Other.
+  name_ko: 
+  name_en: Other.
