Making good progress on diversity score testing

--- a/db/genders.yml
+++ b/db/genders.yml
@@ -16,5 +16,5 @@
 
 - !ruby/object:Gender_
   code: __
-  name_en: I prefer not to answer
+  name_en: I'd prefer not to answer
   name_ko: 나는 대답하지 않는 것을 좋아한다
