--- a/config/database.yml
+++ b/config/database.yml
@@ -15,7 +15,8 @@ default: &default
   pool: 5
   username: test
   password: test
-  socket: /var/run/mysqld/mysqld.sock
+  host: 127.0.0.1
+  port: 3306
 
 development:
   <<: *default
