--- a/db/candidate_feedback.yml
+++ b/db/candidate_feedback.yml
@@ -2,6 +2,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: Acceptable
   name_ko: 
+  credit: 100
   definition_en: >
     You've accurately identified and defined an important term related 
     to the stated topic.
@@ -10,6 +11,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Definition: Incorrect'
   name_ko: 
+  credit: 50
   definition_en: >
     You've identified an important term related to the stated topic, but
     the definition is wrong.
@@ -18,6 +20,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Definition: Insufficient'
   name_ko: 
+  credit: 75
   definition_en: >
     You've identified an important term related to the stated topic, but
     the definition is incomplete in crucial ways.
@@ -26,6 +29,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Definition: Not Understood'
   name_ko: 
+  credit: 50
   definition_en: >
     You've identified an important term related to the stated topic,
     but I was unable to understand the definition as you've provided it.
@@ -34,6 +38,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Definition: Plagiarised'
   name_ko: 
+  credit: 25
   definition_en: >
     You've identified an important term related to the stated topic,
     but I recognize the definition provided as having been copied
@@ -43,13 +48,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Term: Too Generic'
   name_ko: 
-  definition_en: >
-    The term is not specific to the topic or the course.
-  definition_ko:
-
-- !ruby/object:CandidateFeedback_
-  name_en: 'Term: Too Generic'
-  name_ko: 
+  credit: 10
   definition_en: >
     The term is not specific to the topic or the course.
   definition_ko:
@@ -57,6 +56,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Term: Too Obvious'
   name_ko: 
+  credit: 10
   definition_en: >
     The term does not represent new learning or consideration relevant
     to the topic.
@@ -65,6 +65,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Term: Invalid/Incorrect'
   name_ko: 
+  credit: 20
   definition_en: >
     The term does not represent new learning or consideration relevant
     to the topic.
@@ -73,13 +74,15 @@
 - !ruby/object:CandidateFeedback_
   name_en: 'Term: Not Relevant'
   name_ko: 
+  credit: 30
   definition_en: >
-    The term is not relevant to the topic.
+    The term may be interesting, but not relevant to the topic.
   definition_ko:
 
 - !ruby/object:CandidateFeedback_
   name_en: "Term: Doesn't match"
   name_ko: 
+  credit: 40
   definition_en: >
     The term does not match the definition.
   definition_ko:
@@ -87,6 +90,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: "Term: Product Name"
   name_ko: 
+  credit: 50
   definition_en: >
     Products should not be used unless they are dominant to the point
     of being a household name.
@@ -95,6 +99,7 @@
 - !ruby/object:CandidateFeedback_
   name_en: "Term: Proper Name"
   name_ko: 
+  credit: 50
   definition_en: >
     Proper names should not be used unless they are household names
     associated with the field..
