--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -1,5 +1,6 @@
 <%
 rerun = File.file?('rerun.txt') ? IO.read('rerun.txt') : ""
+rerun.gsub!(/\n|\s{2,}/, ' ' )
 rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags ~@wip"
 %>
