--- a/package.json
+++ b/package.json
@@ -2,9 +2,10 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
-    "prop-types": "^15.6.0",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
-    "react-dom": "^16.2.0"
+    "react-dom": "^16.2.0",
+    "react_ujs": "^2.4.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
