--- a/package.json
+++ b/package.json
@@ -2,15 +2,16 @@
   "dependencies": {
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
-    "fetch-rails": "^0.6.0",
     "html2canvas": "^1.0.0-alpha.11",
     "jspdf": "^1.3.5",
     "material-ui": "^1.0.0-beta.38",
+    "promise-polyfill": "^7.1.2",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
-    "react_ujs": "^2.4.4"
+    "react_ujs": "^2.4.4",
+    "whatwg-fetch": "^2.0.4"
   },
   "devDependencies": {
     "webpack-dev-server": "^2.11.1"
