--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "dependencies": {
-    "@material-ui/core": "^1.0.0-rc.0",
+    "@material-ui/core": "^1.0.0",
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
     "html2canvas": "^1.0.0-alpha.11",
@@ -10,6 +10,7 @@
     "rails-erb-loader": "^5.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-i18next": "^7.6.1",
     "react_ujs": "^2.4.4",
     "whatwg-fetch": "^2.0.4"
   },
