--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "dependencies": {
+    "@material-ui/core": "^3.6.1",
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
     "html2canvas": "^1.0.0-alpha.11",
     "jspdf": "^1.3.5",
-    "material-ui": "^1.0.0-beta.38",
+    "material-ui": "^0.20.2",
     "promise-polyfill": "^7.1.2",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
