--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material-ui/core": "^3.8.0",
+    "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^3.2.2",
     "babel-preset-react": "^6.24.1",
     "html2canvas": "^1.0.0-alpha.11",
@@ -11,6 +12,7 @@
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-i18next": "^7.6.1",
+    "react-virtualized": "^9.21.0",
     "react_ujs": "^2.4.4",
     "whatwg-fetch": "^2.0.4"
   },
