--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
   "dependencies": {
-    "@material-ui/core": "^3.8.0",
+    "@material-ui/core": "^3.9.1",
     "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^3.2.2",
+    "autosuggest-highlight": "^3.1.1",
     "babel-preset-react": "^6.24.1",
     "html2canvas": "^1.0.0-alpha.11",
     "jspdf": "^1.3.5",
+    "lodash": "^4.17.11",
     "promise-polyfill": "^7.1.2",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
     "react": "^16.2.0",
+    "react-autosuggest": "^9.4.3",
     "react-dom": "^16.2.0",
     "react-i18next": "^7.6.1",
     "react-virtualized": "^9.21.0",
