--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react": "^16.2.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.2.0",
+    "react-draggable": "^3.1.1",
     "react-i18next": "^7.6.1",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.4.4",
