--- a/package.json
+++ b/package.json
@@ -6,6 +6,9 @@
     "autosuggest-highlight": "^3.1.1",
     "babel-preset-react": "^6.24.1",
     "html2canvas": "^1.0.0-alpha.11",
+    "i18next": "^15.0.4",
+    "i18next-browser-languagedetector": "^3.0.1",
+    "i18next-fetch-backend": "^2.1.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
     "promise-polyfill": "^7.1.2",
@@ -15,7 +18,6 @@
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.2.0",
     "react-draggable": "^3.1.1",
-    "react-i18next": "^7.6.1",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.4.4",
     "whatwg-fetch": "^2.0.4"
