began integrating rich text/html editor

--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
     "@rails/webpacker": "^3.2.2",
     "autosuggest-highlight": "^3.1.1",
     "babel-preset-react": "^6.24.1",
+    "draft-js": "^0.10.5",
+    "draftjs-to-html": "^0.8.4",
+    "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-alpha.11",
     "i18next": "^15.0.4",
     "i18next-browser-languagedetector": "^3.0.1",
@@ -17,6 +20,7 @@
     "react": "^16.2.0",
     "react-autosuggest": "^9.4.3",
     "react-dom": "^16.2.0",
+    "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^3.1.1",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.4.4",
