--- a/package.json
+++ b/package.json
@@ -1,5 +1,9 @@
 {
   "dependencies": {
+    "@fullcalendar/core": "^4.0.2",
+    "@fullcalendar/daygrid": "^4.0.1",
+    "@fullcalendar/moment": "^4.0.1",
+    "@fullcalendar/react": "^4.0.2-beta",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^3.2.2",
@@ -14,6 +18,7 @@
     "i18next-fetch-backend": "^2.1.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
+    "moment": "^2.24.0",
     "promise-polyfill": "^7.1.2",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
