--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@fullcalendar/core": "^4.0.2",
     "@fullcalendar/daygrid": "^4.0.1",
+    "@fullcalendar/list": "^4.0.1",
     "@fullcalendar/moment": "^4.0.1",
     "@fullcalendar/react": "^4.0.2-beta",
     "@material-ui/core": "^3.9.3",
