--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "@fullcalendar/list": "^4.0.1",
     "@fullcalendar/moment": "^4.0.1",
     "@fullcalendar/react": "^4.0.2-beta",
+    "@fullcalendar/rrule": "^4.0.2",
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "@rails/webpacker": "^3.2.2",
