--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ development:
 # Do not set this db to the same as development or production.
 test: &test
   <<: *default
-  database: colab_test
+  database: colab_test_<%= ENV['TEST_ENV_NUMBER'] %>
 
 # As with config/secrets.yml, you never want to store sensitive information,
 # like your database password, in your source code. If your source code is
