--- a/config/cucumber.yml
+++ b/config/cucumber.yml
@@ -4,6 +4,6 @@ rerun.gsub!(/\n|\s{2,}/, ' ' )
 rerun_opts = rerun.to_s.strip.empty? ? "--format #{ENV['CUCUMBER_FORMAT'] || 'progress'} features" : "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} #{rerun}"
 std_opts = "--format #{ENV['CUCUMBER_FORMAT'] || 'pretty'} --strict --tags ~@wip"
 %>
-default: --format json --out tmp/test_report_<%= ENV['TEST_ENV_NUMBER'] %>.json <%= std_opts %> features
+default: --format json --out cucumber/test_report_<%= ENV['TEST_ENV_NUMBER'] %>.json <%= std_opts %> features
 wip: --tags @wip:3 --wip features
 rerun: <%= rerun_opts %> --format rerun --out rerun.txt --strict --tags ~@wip
