--- a/config/storage.yml
+++ b/config/storage.yml
@@ -1,10 +1,31 @@
-test:
-  service: Disk
-  root: <%= Rails.root.join("tmp/storage") %>
+dev:
+  service: S3
+  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
+  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+  region: <%= ENV.fetch('AWS_REGION') %>
+  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
 
-local:
-  service: Disk
-  root: <%= Rails.root.join("storage") %>
+test:
+  service: S3
+  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
+  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+  region: <%= ENV.fetch('AWS_REGION') %>
+  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
+
+prod:
+  service: S3
+  access_key_id: <%= ENV.fetch('AWS_ACCESS_KEY_ID') %>
+  secret_access_key: <%= ENV.fetch('AWS_SECRET_ACCESS_KEY') %>
+  region: <%= ENV.fetch('AWS_REGION') %>
+  bucket: <%= ENV.fetch('S3_BUCKET_NAME') %>
+
+# test:
+#   service: Disk
+#   root: <%= Rails.root.join("tmp/storage") %>
+
+# local:
+#   service: Disk
+#   root: <%= Rails.root.join("storage") %>
 
 # Use rails credentials:edit to set the AWS secrets (as aws:access_key_id|secret_access_key)
 # amazon:
