--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "3.7.7",
   "license": "UNLICENSED",
   "dependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
     "@fullcalendar/core": "^4.0.2",
     "@fullcalendar/daygrid": "^4.0.1",
     "@fullcalendar/list": "^4.0.1",
@@ -12,7 +14,7 @@
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/styles": "^4.2.0",
-    "@rails/webpacker": "^3.2.2",
+    "@rails/webpacker": "^4.0.7",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "babel-preset-react": "^6.24.1",
@@ -40,6 +42,6 @@
     "yarn": "^1.15.2"
   },
   "devDependencies": {
-    "webpack-dev-server": "^2.11.1"
+    "webpack-dev-server": "^3.8.0"
   }
 }
