--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "3.7.7",
   "license": "UNLICENSED",
   "dependencies": {
+    "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
     "@fullcalendar/core": "^4.0.2",
@@ -17,14 +18,17 @@
     "@rails/webpacker": "^4.0.7",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
+    "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
-    "draft-js": "^0.11.0",
+    "draft-js": "^0.10.x",
     "draftjs-to-html": "^0.8.4",
     "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-alpha.11",
     "i18next": "^17.0.6",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-fetch-backend": "^2.1.0",
+    "immutable": "3.x.x",
+    "install": "^0.13.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
     "moment": "^2.24.0",
@@ -36,12 +40,15 @@
     "react-dom": "^16.2.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^3.1.1",
+    "react-render-html": "^0.6.0",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
+    "webpack": "^4.0.0",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
+    "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
   }
 }
