--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "install": "^0.13.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
+    "luxon": "^1.17.3",
     "moment": "^2.24.0",
     "promise-polyfill": "^8.1.3",
     "prop-types": "^15.6.1",
