--- a/package.json
+++ b/package.json
@@ -20,14 +20,14 @@
     "autosuggest-highlight": "^3.1.1",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
-    "draft-js": "^0.10.x",
+    "draft-js": "^0.11.1",
     "draftjs-to-html": "^0.8.4",
     "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-alpha.11",
     "i18next": "^17.0.6",
     "i18next-browser-languagedetector": "^3.0.1",
     "i18next-fetch-backend": "^2.1.0",
-    "immutable": "3.x.x",
+    "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
