--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^4.0.3",
     "react-render-html": "^0.6.0",
+    "react-router-dom": "^5.1.2",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
     "webpack": "^4.0.0",
