--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-react": "^7.0.0",
+    "@date-io/luxon": "^1.3.12",
     "@fullcalendar/core": "^4.0.2",
     "@fullcalendar/daygrid": "^4.0.1",
     "@fullcalendar/list": "^4.0.1",
@@ -14,6 +15,7 @@
     "@fullcalendar/timeline": "^4.0.2",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.2.0",
     "@rails/webpacker": "^4.0.7",
     "add": "^2.0.6",
@@ -31,7 +33,7 @@
     "install": "^0.13.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
-    "luxon": "^1.17.3",
+    "luxon": "^1.21.3",
     "moment": "^2.24.0",
     "promise-polyfill": "^8.1.3",
     "prop-types": "^15.6.1",
@@ -44,6 +46,7 @@
     "react-render-html": "^0.6.0",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
+    "reactjs-popup": "^1.5.0",
     "webpack": "^4.0.0",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
