--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@fullcalendar/timeline": "^4.0.2",
     "@material-ui/core": "^4.2.0",
     "@material-ui/icons": "^4.2.1",
+    "@material-ui/lab": "^4.0.0-alpha.36",
     "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.2.0",
     "@rails/webpacker": "^4.0.7",
