--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "i18next": "^19.0.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-fetch-backend": "^2.1.0",
+    "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
     "jspdf": "^1.3.5",
