--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@date-io/luxon": "^1.3.12",
     "@fullcalendar/core": "^4.0.2",
