--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "autosuggest-highlight": "^3.1.1",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
+    "city-timezones": "^1.2.0",
     "draft-js": "^0.11.1",
     "draftjs-to-html": "^0.9.0",
     "html-to-draftjs": "^1.4.0",
