--- a/package.json
+++ b/package.json
@@ -11,14 +11,14 @@
     "@fullcalendar/core": "^4.0.2",
     "@fullcalendar/daygrid": "^4.0.1",
     "@fullcalendar/list": "^4.0.1",
-    "@fullcalendar/moment": "^4.0.1",
+    "@fullcalendar/luxon": "^4.4.0",
     "@fullcalendar/react": "^4.0.2-beta",
     "@fullcalendar/timeline": "^4.0.2",
-    "@material-ui/core": "^4.2.0",
+    "@material-ui/core": "^4.9.7",
     "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.36",
+    "@material-ui/lab": "^4.0.0-alpha.46",
     "@material-ui/pickers": "^3.2.8",
-    "@material-ui/styles": "^4.2.0",
+    "@material-ui/styles": "^4.9.6",
     "@rails/webpacker": "^4.0.7",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
@@ -40,7 +40,7 @@
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
     "luxon": "^1.21.3",
-    "moment": "^2.24.0",
+    "mui-datatables": "^2.14.0",
     "promise-polyfill": "^8.1.3",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
@@ -51,6 +51,7 @@
     "react-draggable": "^4.0.3",
     "react-i18next": "^11.2.7",
     "react-render-html": "^0.6.0",
+    "react-router-dom": "^5.1.2",
     "react-sweet-state": "^2.0.0",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
