--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
+    "jshint": "^2.11.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
     "luxon": "^1.21.3",
