--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@rails/webpacker": "^5.0.1",
     "@types/react": "^16.9.17",
     "@types/react-dom": "^16.9.4",
+    "@vx/curve": "^0.0.195",
+    "@vx/scale": "^0.0.195",
+    "@vx/shape": "^0.0.195",
+    "@vx/text": "^0.0.195",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "babel-loader": "^8.0.6",
