--- a/package.json
+++ b/package.json
@@ -8,12 +8,11 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@date-io/luxon": "^1.3.12",
-    "@fullcalendar/core": "^4.0.2",
-    "@fullcalendar/daygrid": "^4.0.1",
-    "@fullcalendar/list": "^4.0.1",
-    "@fullcalendar/luxon": "^4.4.0",
-    "@fullcalendar/react": "^4.0.2-beta",
-    "@fullcalendar/timeline": "^4.0.2",
+    "@fullcalendar/core": "5.0.0-beta.2",
+    "@fullcalendar/daygrid": "5.0.0-beta.2",
+    "@fullcalendar/list": "5.0.0-beta.2",
+    "@fullcalendar/luxon": "5.0.0-beta.2",
+    "@fullcalendar/react": "5.0.0-beta.2",
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.50",
@@ -46,6 +45,7 @@
     "lodash": "^4.17.11",
     "luxon": "^1.21.3",
     "mui-datatables": "^2.14.0",
+    "postcss-cssnext": "^3.1.0",
     "promise-polyfill": "^8.1.3",
     "prop-types": "^15.6.1",
     "rails-erb-loader": "^5.4.1",
