--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@babel/plugin-proposal-class-properties": "^7.5.5",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
+    "@babel/preset-typescript": "^7.9.0",
     "@date-io/luxon": "^1.3.12",
     "@fullcalendar/core": "5.0.0-beta.2",
     "@fullcalendar/daygrid": "5.0.0-beta.2",
@@ -19,8 +20,8 @@
     "@material-ui/pickers": "^3.2.8",
     "@material-ui/styles": "^4.9.6",
     "@rails/webpacker": "^5.0.1",
-    "@types/react": "^16.9.17",
-    "@types/react-dom": "^16.9.4",
+    "@types/react": "^16.9.34",
+    "@types/react-dom": "^16.9.6",
     "@vx/curve": "^0.0.195",
     "@vx/scale": "^0.0.195",
     "@vx/shape": "^0.0.195",
@@ -62,7 +63,7 @@
     "react_ujs": "^2.5.0",
     "reactjs-popup": "^1.5.0",
     "ts-loader": "^7.0.0",
-    "typescript": "^3.7.4",
+    "typescript": "^3.8.3",
     "webpack": "^4.0.0",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
