--- a/package.json
+++ b/package.json
@@ -8,7 +8,6 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.9.0",
-    "@date-io/luxon": "^1.3.12",
     "@fullcalendar/core": "5.0.0-beta.2",
     "@fullcalendar/daygrid": "5.0.0-beta.2",
     "@fullcalendar/list": "5.0.0-beta.2",
@@ -17,7 +16,7 @@
     "@material-ui/core": "^4.9.11",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
-    "@material-ui/pickers": "^3.2.10",
+    "@material-ui/pickers": "^v4.0.0-alpha.7",
     "@material-ui/styles": "^4.9.6",
     "@rails/webpacker": "^5.0.1",
     "@types/react": "^16.9.34",
