--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@fullcalendar/list": "5.0.0-beta.2",
     "@fullcalendar/luxon": "5.0.0-beta.2",
     "@fullcalendar/react": "5.0.0-beta.2",
-    "@material-ui/core": "^4.9.11",
+    "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
     "@material-ui/pickers": "^v4.0.0-alpha.7",
@@ -37,6 +37,7 @@
     "i18next": "^19.0.0",
     "i18next-browser-languagedetector": "^4.0.1",
     "i18next-fetch-backend": "^3.0.0",
+    "i18next-intervalplural-postprocessor": "^2.0.0",
     "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
