--- a/package.json
+++ b/package.json
@@ -8,11 +8,11 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.9.0",
-    "@fullcalendar/core": "5.0.0-beta.2",
-    "@fullcalendar/daygrid": "5.0.0-beta.2",
-    "@fullcalendar/list": "5.0.0-beta.2",
-    "@fullcalendar/luxon": "5.0.0-beta.2",
-    "@fullcalendar/react": "5.0.0-beta.2",
+    "@fullcalendar/core": "^5.0.0",
+    "@fullcalendar/daygrid": "^5.0.0",
+    "@fullcalendar/list": "^5.0.0",
+    "@fullcalendar/luxon": "^5.0.0",
+    "@fullcalendar/react": "^5.0.0",
     "@material-ui/core": "^4.9.14",
     "@material-ui/icons": "^4.2.1",
     "@material-ui/lab": "^4.0.0-alpha.52",
