--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^4.0.3",
     "react-i18next": "^11.2.7",
+    "react-joyride": "^2.2.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-sweet-state": "^2.0.0",
