things are working and redux may be coming

--- a/package.json
+++ b/package.json
@@ -52,17 +52,20 @@
     "rails-erb-loader": "^5.4.1",
     "react": "^16.11.0",
     "react-autosuggest": "^10.0.0",
+    "react-devtools": "^4.7.0",
     "react-dom": "^16.11.0",
     "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^4.0.3",
     "react-i18next": "^11.2.7",
     "react-joyride": "^2.2.1",
+    "react-redux": "^7.2.0",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-sweet-state": "^2.0.0",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
     "reactjs-popup": "^1.5.0",
+    "redux": "^4.0.5",
     "ts-loader": "^7.0.0",
     "typescript": "^3.8.3",
     "webpack": "^4.0.0",
