--- a/package.json
+++ b/package.json
@@ -21,10 +21,10 @@
     "@rails/webpacker": "^5.0.1",
     "@types/react": "^16.9.34",
     "@types/react-dom": "^16.9.6",
-    "@vx/curve": "^0.0.197",
-    "@vx/scale": "^0.0.197",
-    "@vx/shape": "^0.0.197",
-    "@vx/text": "^0.0.197",
+    "@vx/curve": "^0.0.198",
+    "@vx/scale": "^0.0.198",
+    "@vx/shape": "^0.0.198",
+    "@vx/text": "^0.0.198",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "babel-loader": "^8.0.6",
@@ -41,6 +41,7 @@
     "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
+    "j-toker": "^0.0.10-beta3",
     "jshint": "^2.11.0",
     "jspdf": "^1.3.5",
     "lodash": "^4.17.11",
@@ -58,7 +59,7 @@
     "react-draggable": "^4.0.3",
     "react-i18next": "^11.2.7",
     "react-joyride": "^2.2.1",
-    "react-redux": "^7.2.0",
+    "react-redux": "^7.2.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^5.1.2",
     "react-sweet-state": "^2.0.0",
@@ -66,13 +67,16 @@
     "react_ujs": "^2.5.0",
     "reactjs-popup": "^1.5.0",
     "redux": "^4.0.5",
-    "ts-loader": "^7.0.0",
+    "redux-thunk": "^2.3.0",
+    "ts-loader": "^8.0.2",
     "typescript": "^3.8.3",
     "webpack": "^4.0.0",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.9",
+    "@types/react-router-dom": "^5.1.5",
     "webpack-cli": "^3.3.8",
     "webpack-dev-server": "^3.8.0"
   }
