updated gems and node modules and it still seems to work

--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,10 @@ test_results.html
 coverage
 cucumber
 .rake_tasks
+
+/public/packs
+/public/packs-test
+/node_modules
+/yarn-error.log
+yarn-debug.log*
+.yarn-integrity
