--- a/package.json
+++ b/package.json
@@ -5,9 +5,10 @@
   "dependencies": {
     "@babel/core": "^7.0.0-0",
     "@babel/plugin-proposal-class-properties": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.13.10",
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
-    "@babel/preset-typescript": "^7.9.0",
+    "@babel/preset-typescript": "^7.13.0",
     "@fullcalendar/core": "^5.0.0",
     "@fullcalendar/daygrid": "^5.0.0",
     "@fullcalendar/list": "^5.0.0",
@@ -19,8 +20,8 @@
     "@material-ui/pickers": "^v4.0.0-alpha.7",
     "@material-ui/styles": "^4.9.6",
     "@rails/webpacker": "^5.0.1",
-    "@types/react": "^16.9.34",
-    "@types/react-dom": "^16.9.6",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.3",
     "@vx/curve": "^0.0.198",
     "@vx/scale": "^0.0.198",
     "@vx/shape": "^0.0.198",
@@ -68,7 +69,7 @@
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
     "ts-loader": "^8.0.2",
-    "typescript": "^3.8.3",
+    "typescript": "^4.2.3",
     "webpack": "^4.0.0",
     "whatwg-fetch": "^3.0.0",
     "yarn": "^1.15.2"
