--- a/db/quotes.yml
+++ b/db/quotes.yml
@@ -294,3 +294,8 @@
     You may have the greatest bunch of individual stars in the world,
     but if they don't play together, the club won't be worth a dime.
   attribution: Babe Ruth
+
+- !ruby/object:Quote_
+  text_en: >
+    I am because we are.
+  attribution: Nguni Bantu term
