--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@vx/text": "^0.0.198",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
+    "axios": "^0.21.1",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "city-timezones": "^1.2.0",
