--- a/package.json
+++ b/package.json
@@ -37,13 +37,14 @@
     "electron": "^11.0.1",
     "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-alpha.11",
-    "i18next": "^20.1.0",
+    "i18next": "^21.5.3",
     "i18next-browser-languagedetector": "^6.0.1",
-    "i18next-fetch-backend": "^3.0.0",
+    "i18next-fetch-backend": "^4.1.0",
     "i18next-intervalplural-postprocessor": "^3.0.0",
     "i18next-localstorage-cache": "^1.1.1",
     "immutable": "^4.0.0-rc.12",
     "install": "^0.13.0",
+    "intl-pluralrules": "^1.3.1",
     "j-toker": "^0.0.10-beta3",
     "jshint": "^2.11.0",
     "jspdf": "^2.0.0",
