beginning migration to @mui 5

--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@emotion/react": "^11.7.1",
+    "@emotion/styled": "^11.6.0",
     "@fullcalendar/core": "^5.0.0",
     "@fullcalendar/daygrid": "^5.0.0",
     "@fullcalendar/list": "^5.0.0",
@@ -19,6 +21,8 @@
     "@material-ui/lab": "^4.0.0-alpha.52",
     "@material-ui/pickers": "^v4.0.0-alpha.7",
     "@material-ui/styles": "^4.9.6",
+    "@mui/material": "^5.2.8",
+    "@mui/styles": "^5.2.3",
     "@rails/webpacker": "^5.0.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
