--- a/package.json
+++ b/package.json
@@ -16,11 +16,8 @@
     "@fullcalendar/list": "^5.0.0",
     "@fullcalendar/luxon": "^5.0.0",
     "@fullcalendar/react": "^5.0.0",
-    "@material-ui/core": "^4.9.14",
-    "@material-ui/icons": "^4.2.1",
-    "@material-ui/lab": "^4.0.0-alpha.52",
-    "@material-ui/pickers": "^v4.0.0-alpha.7",
-    "@material-ui/styles": "^4.9.6",
+    "@mui/icons-material": "^5.2.5",
+    "@mui/lab": "^5.0.0-alpha.64",
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "@rails/webpacker": "^5.0.1",
@@ -53,8 +50,8 @@
     "jshint": "^2.11.0",
     "jspdf": "^2.0.0",
     "lodash": "^4.17.11",
-    "luxon": "^1.21.3",
-    "mui-datatables": "^3.0.0",
+    "luxon": "^2.3.0",
+    "mui-datatables": "^4.0.0",
     "postcss-cssnext": "^3.1.0",
     "promise-polyfill": "^8.1.3",
     "prop-types": "^15.6.1",
