--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@babel/preset-env": "^7.8.3",
     "@babel/preset-react": "^7.0.0",
     "@babel/preset-typescript": "^7.13.0",
+    "@date-io/luxon": "^2.11.1",
     "@emotion/react": "^11.7.1",
     "@emotion/styled": "^11.6.0",
     "@fullcalendar/core": "^5.0.0",
@@ -29,7 +30,7 @@
     "@vx/text": "^0.0.199",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
-    "axios": "^0.24.0",
+    "axios": "^0.25.0",
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "city-timezones": "^1.2.0",
