--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
     "react-dom": "^17.0.2",
     "react-draft-wysiwyg": "^1.13.2",
     "react-draggable": "^4.0.3",
+    "react-google-login": "^5.2.2",
     "react-i18next": "^11.2.7",
     "react-joyride": "^2.2.1",
     "react-redux": "^7.2.1",
