--- a/package.json
+++ b/package.json
@@ -24,10 +24,10 @@
     "@rails/webpacker": "^5.0.1",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
-    "@vx/curve": "^0.0.199",
-    "@vx/scale": "^0.0.199",
-    "@vx/shape": "^0.0.199",
-    "@vx/text": "^0.0.199",
+    "@visx/curve": "^2.1.0",
+    "@visx/scale": "^2.2.2",
+    "@visx/shape": "^2.4.0",
+    "@visx/text": "^2.3.0",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.25.0",
