--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@visx/curve": "^2.1.0",
+    "@visx/react-spring": "^2.6.0",
     "@visx/scale": "^2.2.2",
     "@visx/shape": "^2.4.0",
     "@visx/text": "^2.3.0",
+    "@visx/xychart": "^2.9.0",
     "add": "^2.0.6",
     "autosuggest-highlight": "^3.1.1",
     "axios": "^0.25.0",
@@ -68,11 +70,13 @@
     "react-redux": "^7.2.1",
     "react-render-html": "^0.6.0",
     "react-router-dom": "^6.2.1",
+    "react-spring": "^9.4.2",
     "react-virtualized": "^9.21.0",
     "react_ujs": "^2.5.0",
     "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-thunk": "^2.3.0",
+    "resize-observer-hook": "^1.0.5",
     "ts-loader": "^9.2.6",
     "typescript": "^4.2.3",
     "webpack": "^4.0.0",
