--- a/package.json
+++ b/package.json
@@ -36,6 +36,8 @@
     "babel-loader": "^8.0.6",
     "babel-preset-react": "^6.24.1",
     "city-timezones": "^1.2.0",
+    "d3-array": "^3.1.1",
+    "d3-color": "^3.0.1",
     "draft-js": "^0.11.1",
     "draftjs-to-html": "^0.9.0",
     "electron": "^17.0.0",
