--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "city-timezones": "^1.2.0",
     "d3-array": "^3.1.1",
     "d3-color": "^3.0.1",
+    "d3-scale-chromatic": "^3.0.0",
     "draft-js": "^0.11.1",
     "draftjs-to-html": "^0.9.0",
     "electron": "^17.0.0",
