--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "draft-js": "^0.11.1",
     "draftjs-to-html": "^0.9.0",
     "electron": "^17.0.0",
+    "email-validator": "^2.0.4",
     "html-to-draftjs": "^1.4.0",
     "html2canvas": "^1.0.0-alpha.11",
     "i18next": "^21.5.3",
