--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@mui/material": "^5.2.8",
     "@mui/styles": "^5.2.3",
     "@rails/webpacker": "^5.0.1",
+    "@react-spring/parallax": "^9.4.4",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.3",
     "@visx/curve": "^2.1.0",
