fixed pack tag versions and views

--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     "linked-sliders": "^0.2.0",
     "luxon": "^2.3.1",
     "mini-css-extract-plugin": "^2.6.0",
-    "mui-datatables": "https://github.com/gregnb/mui-datatables",
+    "mui-datatables": "^4.2.2",
     "promise-polyfill": "^8.2.3",
     "prop-types": "^15.8.1",
     "react": "^18.0.0",
@@ -69,7 +69,7 @@
     "redux": "^4.1.2",
     "redux-thunk": "^2.4.1",
     "resize-observer-hook": "^1.0.5",
-    "shakapacker": "^6.2.0",
+    "shakapacker": "6.2.0",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
     "typescript": "^4.6.3",
