--- a/containers/arm/app/Dockerfile
+++ b/containers/arm/app/Dockerfile
@@ -1,6 +1,6 @@
 FROM arm64v8/ubuntu
 
-RUN apt update && apt upgrade
+RUN apt update && apt upgrade -y
 RUN apt -y install \
   curl \
   imagemagick \
