docker fixes - I hope

--- a/containers/arm/db/Dockerfile
+++ b/containers/arm/db/Dockerfile
@@ -1,6 +1,10 @@
 FROM arm64v8/mariadb
 
-RUN echo -e "CREATE USER IF NOT EXISTS 'test'@'%' IDENTIFIED BY 'test'; \
- GRANT ALL PRIVILEGES ON colab_test_.* TO 'test'@'%'; \
- FLUSH PRIVILEGES;" >> /docker-entrypoint-initdb.d/init-privs.sql
+COPY initDBs.sql /docker-entrypoint-initdb.d/init-privs.sql
+
+ENV MYSQL_ROOT_PASSWORD test
+
+EXPOSE 3306
+
+CMD ["mysqld"]
 
