--- a/containers/x86/app/Dockerfile
+++ b/containers/x86/app/Dockerfile
@@ -24,11 +24,10 @@ USER colab
 RUN mkdir -p /home/colab/src/app
 WORKDIR /home/colab/src/app
 
-RUN mkdir /home/colab/.ssh 
+RUN mkdir -p ~/.ssh && ln -s /run/secrets/ssh_key ~/.ssh/id_rsa
 
 SHELL ["/bin/bash", "-l", "-c"]
 
-# COPY containers/asdf-install-toolset /usr/local/bin
 RUN echo -e "export S3_BUCKET_NAME=colab-dev" >> ~/.bashrc &&\
   echo -e "export AWS_ACCESS_KEY_ID=XXXXXXX" >> ~/.bashrc &&\
   echo -e "export AWS_SECRET_ACCESS_KEY=XXXXXXX" >> ~/.bashrc &&\
