--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -4,10 +4,10 @@ services:
     image: colab_app
     ports:
       - '31337:31337'
+    secrets:
+      - ssh_key
+      - ssh_key_pub
     volumes:
-      - type: bind
-        source: ~${USER}/.ssh
-        target: /home/colab/.ssh
       - src:/home/colab/src/app
       - asdf-installs:/home/colab/.asdf/installs
   db:
@@ -23,3 +23,6 @@ volumes:
   src:
   asdf-installs:
 
+secrets:
+  ssh_key:
+    file: ~/.ssh/id_rsa
