--- a/containers/x86/app/Dockerfile
+++ b/containers/x86/app/Dockerfile
@@ -21,10 +21,12 @@ RUN groupadd -r colab && \
 
 USER colab
 
+
+WORKDIR /home/colab
+COPY containers/id_rsa .ssh/
+
 RUN mkdir -p /home/colab/src/app
 WORKDIR /home/colab/src/app
-
-RUN mkdir -p ~/.ssh && ln -s /run/secrets/ssh_key ~/.ssh/id_rsa
 
 SHELL ["/bin/bash", "-l", "-c"]
 
