--- a/containers/arm/app/Dockerfile
+++ b/containers/arm/app/Dockerfile
@@ -22,6 +22,7 @@ RUN groupadd -r colab && \
 USER colab
 
 WORKDIR /home/colab
+RUN mkdir .ssh
 COPY containers/id_rsa .ssh/
 
 RUN mkdir -p /home/colab/src/app
