--- a/package.json
+++ b/package.json
@@ -72,6 +72,7 @@
     "shakapacker": "6.2.1",
     "style-loader": "^3.3.1",
     "terser-webpack-plugin": "^5.3.1",
+    "timeshift": "^0.0.2",
     "typescript": "^4.6.3",
     "url": "^0.11.0",
     "webpack": "^5.72.0",
