fix compose shims

--- a/containers/x86/app/Dockerfile
+++ b/containers/x86/app/Dockerfile
@@ -50,7 +50,9 @@ RUN source ~/.bashrc && \
 
 USER root
 
-RUN mkdir /home/colab/.asdf/installs && \
+RUN mkdir /home/colab/.asdf/shims && \
+  chown colab:colab /home/colab/.asdf/shims && \
+  mkdir /home/colab/.asdf/installs && \
   chown colab:colab /home/colab/.asdf/installs
 
 USER colab
